# BeeAi

./: README.md
bee_ai/: .dockerignore  .env.development  .gitignore  Dockerfile  EXERCISE.md  Makefile  alembic.ini  docker-compose-dev.yaml  docker-compose-local.yaml  pre-commit.yaml  pyproject.toml
bee_ai/.github/workflows/: ci.yaml
bee_ai/alembic/: env.py
bee_ai/alembic/versions/: 2023_10_22_1610-9f980b3e29c6_create_db.py
bee_ai/migrations/: env.py
bee_ai/migrations/versions/: 2023_10_22_2244-67e527d7edf8_make_migrations.py
bee_ai/src/: main.py
bee_ai/src/api/controllers/: __init__.py  check_in_db.py  crud_items.py  get_items.py  schemas.py
bee_ai/src/api/routers/: __init__.py  items.py  schemas.py
bee_ai/src/core/: settings.py
bee_ai/src/core/models/: __init__.py  base.py  engins.py  questions.py
bee_ai/tests/: test_items.py  test_root.py
