[tool.poetry]
name = "bee-ai"
version = "0.1.0"
description = ""
authors = ["Nerush Kirill (home) <nerush.kirill@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.28.0"
alembic = "^1.12.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.2"
coverage = "^7.3.2"
bandit = "^1.7.5"
black = "^23.10.0"
mypy = "^1.6.1"
pylint = "^3.0.1"
ruff = "^0.1.1"
pre-commit = "^3.5.0"


[tool.mypy]
python_version = 3.11
plugins = "sqlalchemy.ext.mypy.plugin"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
